# NovaGL

./: CMakeLists.txt  README.md  api.md
examples/01_triangle/: CMakeLists.txt  main.c
examples/02_textured_quad/: CMakeLists.txt  main.c
examples/03_rotating_cube/: CMakeLists.txt  main.c
examples/04_terrain_fog/: CMakeLists.txt  main.c
examples/05_fire_particles/: CMakeLists.txt  main.c
examples/06_dynamic_textures/: CMakeLists.txt  main.c
examples/07/: CMakeLists.txt  main.c
examples/08/: CMakeLists.txt  main.c
examples/09_racer/: CMakeLists.txt  main.c
include/: NovaGL.h  nova_glfw.h
include/GL/: gl.h
include/GLES2/: gl2.h
include/GLFW/: glfw3.h
include/glad/: gl.h  glad.h
shaders/: NovaGL_shader.pica  NovaGL_shader_basic.pica  NovaGL_shader_clipspace.pica  NovaGL_shader_lighting.pica  NovaGL_shader_texmtx.pica
src/: CMakeLists.txt  NovaGL.c  clear.c  compat.c  context.h  current.c  display_list.c  draw.c  egl.c  fog.c  framebuffer.c  framebuffer.cpp  immediate.c  lookup.c  matrix.c  nova_glfw.c  nova_stb_ds_impl.c  raster.c  splashscreen.c  state.c  stb_ds.h  texture.c  utils.c  utils.h  vbo.c  vertex_array.c  vfp_math.h
